--- a/css/style.css
+++ b/css/style.css
@@ -167,9 +167,14 @@ body {
 	height: 1px;
 	background-color: #e3e3e3;
 }
-.ch_price
+.ch_price, .act-btns
 {
 	float: right;
+}
+.act-btns span, .act-btns
+{
+	margin-left: 5px;
+	margin-right: 5px;
 }
 .checkout-divider
 {
@@ -320,6 +325,13 @@ body {
 {
 	width: 50px;
 	height: 50px;
+}
+.nav-menu .dropdown sup
+{
+	background-color: red;
+	padding: 2px 5px;
+	border-radius: 30px;
+	color: #fff;
 }
 @media screen and (max-width: 600px) 
 {
